ecmascript/parser/tests/test262-error-references/fail/0abefbc80bf651fa.js.stderr
error: Unexpected token Some(Semi)
 --> $DIR/tests/test262-parser/fail/0abefbc80bf651fa.js:1:15
  |
1 | for (let let;;;) {}
  |               ^

